<resources>
    <string name="app_name">NoelNwaelugo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_personal_detail">Enter Personal Detail</string>
    <string name="name">Name</string>
    <string name="calculate_your_bmi">Calculate Your Body Mass Index</string>
    <string name="weight">Weight</string>
    <string name="body_mass_index">Body Mass Index</string>
    <string name="calculate">Calculate</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="ponderal_index">Ponderal Index: 10.64kg/m3</string>
    <string name="normal_bmi_range">Normal BMI range: 18.5kg/m2 - 25kg/m2</string>

    <string-array name="Gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>

</resources>