<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AddDetailsFragment">


    <TextView
        android:id="@+id/enter_personal_detail_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="@dimen/dimen_16"
        android:fontFamily="@font/ralewayregular"
        android:text="@string/enter_personal_detail"
        android:textColor="@color/main_blue"
        android:textSize="@dimen/dimen_28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_et"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_marginVertical="@dimen/dimen_16"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_personal_detail_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/calc_bmi_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_48"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/calculate_your_bmi"
        android:textColor="@color/faint_grey"
        android:textSize="@dimen/dimen_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_et" />

    <LinearLayout
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_marginVertical="@dimen/dimen_24"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_bmi_tv">


        <TextView
            android:id="@+id/weight_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:text="@string/weight"
            android:textSize="@dimen/dimen_18" />

        <TextView
            android:id="@+id/height_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:text="@string/height"
            android:textSize="@dimen/dimen_18" />

        <TextView
            android:id="@+id/gender_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:text="@string/gender"
            android:textSize="@dimen/dimen_18" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/picker_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_marginVertical="@dimen/dimen_16"
        app:cardElevation="@dimen/dimen_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">


            <NumberPicker
                android:id="@+id/weight_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <NumberPicker
                android:id="@+id/height_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_weight="1" />

            <NumberPicker
                android:id="@+id/gender_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_marginVertical="@dimen/dimen_24"
        android:background="@drawable/gradient"
        app:backgroundTint="@null"
        android:text="@string/calculate"
        android:textSize="@dimen/dimen_18"
        android:textAllCaps="false"
        android:fontFamily="@font/ralewaymedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/picker_card" />
</androidx.constraintlayout.widget.ConstraintLayout>